@@ -2,8 +2,11 @@ use strict;
 use warnings;
 use English qw(-no_match_vars);
 use File::Copy;
-use Test::More tests => 26;
+use Test::More tests => 31;
 use Test::Exception;
+use Test::Warn;
+use File::Temp qw/ tempdir /;
+use File::Path qw/ make_path /;
 
 use t::dbic_util;
 
@@ -129,6 +132,58 @@ lives_ok {
         '  \'multiplex\' tag is set on that run' );
     is( $test->run_db_row->is_tag_set('rta'), 1,
         '  \'rta\' tag is set on that run' );
+}
+
+{
+    my $run_info =
+q{<?xml version="1.0"?>
+<RunInfo xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" Version="2">
+  <Run Id="150606_HS31_16475_B_HCYVGADXX" Number="469">
+    <Flowcell>HCYVGADXX</Flowcell>
+    <Instrument>D00241</Instrument>
+    <Date>150606</Date>
+    <Reads>
+      <Read Number="1" NumCycles="100" IsIndexedRead="N" />
+      <Read Number="2" NumCycles="8" IsIndexedRead="Y" />
+      <Read Number="3" NumCycles="100" IsIndexedRead="N" />
+    </Reads>
+    <FlowcellLayout LaneCount="2" SurfaceCount="2" SwathCount="2" TileCount="16" />
+    <AlignToPhiX>
+      <Lane>1</Lane>
+      <Lane>2</Lane>
+    </AlignToPhiX>
+  </Run>
+</RunInfo>};
+
+    
+    my $root = tempdir( CLEANUP => 1 );
+    my $rf = join q[/], $root, 'ILorHSany_sf50/incoming/150606_HS31_01234_B_HCYVGADXX';
+    make_path $rf;
+
+    foreach my $i ((1 .. 8)) {
+      $schema->resultset('RunLane')->create({
+        id_run => 1234, position => $i, tile_count => 16, tracks => 2});
+      
+    }
+    is ($test->run_db_row->run_lanes->count, 8, 'run has eight lanes');
+
+    # create RunInfo file
+    open my $fh, '>', join(q[/], $rf, 'RunInfo.xml');
+    print $fh $run_info;
+    close $fh;
+
+    $test = Monitor::RunFolder->new( runfolder_path => $rf,
+                                     _schema        => $schema, );
+    warnings_like { $test->read_long_info(1) } [
+      qr/Deleted lane 3/, qr/Deleted lane 4/, qr/Deleted lane 5/,
+      qr/Deleted lane 6/, qr/Deleted lane 7/, qr/Deleted lane 8/],
+      'warnings about lane deletion';
+      
+    is ($test->lane_count, 2, 'two lanes listed in run info');
+    is ($test->run_db_row->run_lanes->count, 2, 'now run has two lanes');
+
+    $test->read_long_info(1);
+    is ($test->run_db_row->run_lanes->count, 2, 'no change - run has two lanes');
 }
 
 1;
