@@ -4,6 +4,7 @@ release 84.5
  - staging monitor extension:
      move qc complete runfolders from analysis to outgoing
      propagate group ownership inside the runfolder
+ - staging/instrument monitor: remove superfluous run lanes
  - perform runfolder name validation against the tracking db run record
    rather than against xml feeds
 
